# cursorless

./: .editorconfig  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .luacheckrc  .luarc.json  .npmrc  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .projections.json  .stylelintignore  .syncpackrc.json  .vscodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KIRILL-cheatSheetStats.md  NOTICE.md  README.md  SECURITY.md  docs-build.sh  dont_clone_monorepo.py  eslint.config.mjs  eslint.config.mts  failing-tests.txt  flake.nix  init.lua  mise.toml  netlify.toml  oxlint.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml  (+10 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.meta-updater/: main.mjs  package.json  tsconfig.json
changelog/: 2023-08-expanded-talon-api.md  2023-09-addedArgumentTargetToCallAction.md  2023-09-addedDestinationAndScopeTypeToInsertSnippetAction.md  2023-09-addedHatShapesDirSetting.md  2023-09-addedInsertPythonAction.md  2023-09-addedJoinLinesAction.md  2023-09-updatedHatShapes.md  2023-11-modalKeyboardVscodeCommands.md  2023-12-addedBreakLineAction.md  2023-12-addedVisibleModifier.md  2023-12.addedGrandScopeModifier.md  2024-02-addedIncrementAndDecrementActions.md  2024-03-addLuaSupport.md  2024-03-addedSpreadModifier.md  2024-03-fallBackToTalonActions.md  2024-04-community-snippets.md  2024-05-reformatPublicAPI.md  2024-06-addCreateDestination.md  2024-06-bulkScopeTestRecorder.md  2024-08-boundedHeadTail.md  2024-08-joinTokens.md  (+16 more)
(+12830 files in other folders)
