# Public Talon 0.4 uses Python 3.11

[project]
name = "cursorless"
version = "0.1.0"
requires-python = "==3.11.*"

[tool.ruff]
target-version = "py311"
extend-exclude = ["vendor", "resources/playground"]

[tool.ruff.lint]
select = ["E", "F", "C4", "I001", "UP", "SIM", "FLY"]
ignore = ["E501", "SIM105", "UP007", "UP035", "UP045"]

[tool.pyright]
pythonVersion = "3.11"
reportSelfClsParameterName = false
reportMissingModuleSource = false
reportMissingImports = false
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "cursorless-talon/src/vendor",
  "resources/playground",
]
